--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- スライダー css-->
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css" media="screen" />
@@ -228,7 +228,7 @@
         <!-- ↓body閉じタグ直前でjQueryを読み込む -->
         <!-- <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
-        <script type="text/javascript" src="js/common.js"></script>
+        <script type="text/javascript" src="common.js"></script>
 
 
 </body>
