--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         <ul id="accordion" class="accordion">
           <li>
-            <div class="link"><i class="fas fa-school"></i>
+            <div class="link">
                 <span>学歴</span><i class="fa fa-chevron-down"></i></div>
             <ul class="submenu">
                 <li>2014/3　<br class="hp-none">神奈川県立百合丘高等学校 卒業</li>
@@ -201,7 +201,7 @@
               </ul>
           </li>
           <li>
-            <div class="link"><i class="fas fa-briefcase"></i>
+            <div class="link">
                 <span>職歴</span><i class="fa fa-chevron-down"></i></div>
             <ul class="submenu">
               <li>2018/4　<br class="hp-none">株式会社ウェルネスフロンティア ジョイリハ 入社</li>
